--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
     "node-sass": "^4.14.1",
     "pubsub-js": "^1.9.0",
     "vue": "^2.6.11",
